--- a/gb/21/9/12/n13228383.md
+++ b/gb/21/9/12/n13228383.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vtmwhj347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vtmwhj347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vtmwhj347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vtmwhj347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vtmwhj347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vtmwhj347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>杨威：9?11二十年后 中美关系待重新定义</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13228391-GettyImages-1235186207-600x400.jpg" />
 <h6>9月11日，美国民众在纽约9?11国家纪念馆前悼念20年前9?11恐怖袭击的遇难者。（Ed Jones/AFP via Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2021年09月13日讯】9月11日，美国各界纷纷纪念9?11恐怖袭击二十周年，美国之外也有大量纪念活动，包括在巴黎的阿富汗人还在此时集会反对塔利班。然而，中共再次表现了极端另类的态度，真实反映了9?11二十年后，<ahref="https://github.com/vtmwhj347/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>急需<ahref="https://github.com/vtmwhj347/djy/blob/master/gb/tag/%E9%87%8D%E6%96%B0%E5%AE%9A%E4%B9%89.md#1">重新定义</a>。</p>
+	<p>【大纪元2021年09月13日讯】9月11日，美国各界纷纷纪念9?11恐怖袭击二十周年，美国之外也有大量纪念活动，包括在巴黎的阿富汗人还在此时集会反对塔利班。然而，中共再次表现了极端另类的态度，真实反映了9?11二十年后，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>急需<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%8D%E6%96%B0%E5%AE%9A%E4%B9%89.md#1">重新定义</a>。</p>
 <h2><strong>9?11</strong><strong>纪念之际</strong> <strong>新华社文章嘲讽美国</strong></h2>
 <p>9月12日，中共党媒新华社发表文章《美国为何越反越恐？》，放在网站首页醒目位置，标题还加了一句“西方须吸取失败教训”。文章以画报形式体现，首先放上了9?11恐怖袭击的视频；随后描述，近日美军撤离阿富汗，伊斯兰国分支机构在喀布尔机场发动恐袭。</p>
 <p>9?11二十周年之际，中共故意提及最近发生在阿富汗机场的恐怖袭击，嘲笑美国的态度一览无余。事实上，自喀布尔机场恐怖袭击之后，中共从未正式称之为恐怖袭击。</p>
 <p>文章还煞有介事地称：20年前，9?11恐怖袭击后，美国以反恐名义在中东发动了一系列战争；20年过去了，阿富汗境内恐怖组织不减反增，越反越恐，美国有推卸不了的责任。当然，文章并未提及，中共一直在支持塔利班，今天正式公开化。</p>
-<p>不知有多少美国人能看到或看懂这篇文章，又会作何感想？中共的仇美宣传已经完全没有了底线，这篇文章不仅仅是为了内部宣传，更表明了中共对美国的态度，刚刚与<ahref="https://github.com/vtmwhj347/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>通话的美国总统<ahref="https://github.com/vtmwhj347/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>，是否又不得不接受一次教训呢？</p>
+<p>不知有多少美国人能看到或看懂这篇文章，又会作何感想？中共的仇美宣传已经完全没有了底线，这篇文章不仅仅是为了内部宣传，更表明了中共对美国的态度，刚刚与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>通话的美国总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>，是否又不得不接受一次教训呢？</p>
 <h2><strong>9?11</strong><strong>与疫情损失哪个更惨重</strong></h2>
 <p>白宫的简短声明，并未透露拜习通话的更多细节，白宫新闻发言人普萨基（Jen Psaki）随后证实“确实讨论了一系列跨国性问题，包括COVID-19，了解其起源当然是本届政府的主要关注点”，“但不打算进一步详细说明”。</p>
 <p>截止9月11日，美国因感染中共病毒死亡的人数为656,318，超过4千万人感染。9?11恐怖袭击最终确认遇难2,996人。</p>
@@ -21,9 +21,9 @@
 <p>9?11确实应该纪念、反思；如今，美国政府已经承认中共政权是最大的挑战，今后如何对待中共政权也值得思量。</p>
 <h2><strong>拜习通话谁示强谁示弱？</strong></h2>
 <p>拜习通话后，双方的声明都没有提及疫情追责或病毒源头调查。白宫发言人普萨基称“继续支持世卫组织在中国开展的第二阶段调查，并呼吁北京允许在中国对COVID-19起源进行进一步调查。”</p>
-<p><ahref="https://github.com/vtmwhj347/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>在美军航母进入南海之际，与<ahref="https://github.com/vtmwhj347/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>通话，或许是展现某种强硬的安排；但拜登公开表示要避免冲突，又不公布疫情追责的讨论，实际会被中共当作美国政府示弱的表现。9月12日新华社的文章表明，中共高层大概吃定了美国不会动手。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>在美军航母进入南海之际，与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>通话，或许是展现某种强硬的安排；但拜登公开表示要避免冲突，又不公布疫情追责的讨论，实际会被中共当作美国政府示弱的表现。9月12日新华社的文章表明，中共高层大概吃定了美国不会动手。</p>
 <p>9月1日，习近平在中共党校训话，称“世界百年未有之大变局加速演进……我们面临的风险挑战明显增多，总想过太平日子、不想斗争是不切实际的。要丢掉幻想、勇于斗争，在原则问题上寸步不让、寸土不让”。</p>
-<p>白宫发言人普萨基则称拜习通话“旨在保持国家之间的沟通渠道畅通”。这或许也能解释，中共的声明中，习近平为何称“山重水复疑无路，柳暗花明又一村”。中共的一连串失误，本来把<ahref="https://github.com/vtmwhj347/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>的主动权拱手送给了美国政府，白宫虽然继续强调中美“竞争”，却似乎并不愿拥有太多的主动权，更没有公开就疫情追责向中共施压。</p>
+<p>白宫发言人普萨基则称拜习通话“旨在保持国家之间的沟通渠道畅通”。这或许也能解释，中共的声明中，习近平为何称“山重水复疑无路，柳暗花明又一村”。中共的一连串失误，本来把<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E7%BE%8E%E5%85%B3%E7%B3%BB.md#1">中美关系</a>的主动权拱手送给了美国政府，白宫虽然继续强调中美“竞争”，却似乎并不愿拥有太多的主动权，更没有公开就疫情追责向中共施压。</p>
 <p>9?11之后，美国把主要精力放在反恐战争，忽略了中共的最大挑战，但反恐战争并非是造成美国对中共错误政策的根本原因。</p>
 <h2><strong>反恐战争前后的中美关系</strong></h2>
 <p>9?11发生5年前，1996年，中共军队在台海演习、制造危机，美国立即出动了两个航空母舰战斗群到台湾海峡，中共被迫放软。台海危机后，中美关系很快回暖。1997年，中共领导人在六四事件后首次访问美国。1998年美国总统回访中国。</p>
@@ -46,41 +46,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13225300.md#1">拜登习近平通话90分钟 根本分歧未解决</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13225332.md#1">白宫：拜登和习近平谈到病毒起源调查</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/11/n13226261.md#1">【一线采访】福建疫情扩大 村民：挺严重</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/11/n13226388.md#1">【更新】9.11恐袭20周年 全球纪念遇难者</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/10/n13225300.md#1">拜登习近平通话90分钟 根本分歧未解决</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/10/n13225332.md#1">白宫：拜登和习近平谈到病毒起源调查</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/11/n13226261.md#1">【一线采访】福建疫情扩大 村民：挺严重</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/11/n13226388.md#1">【更新】9.11恐袭20周年 全球纪念遇难者</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/18/n10793353.md#1" target="_blank">林辉：金庸堂哥穆旦走到了幻想的尽头</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/15/n11045840.md#1" target="_blank">晓明：1968年广西阳朔杀惨案回顾</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13225346.md#1">【百年真相】红色娘子军 被中共利用抛弃的女兵</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/9/n13220766.md#1">史上一只黑天鹅预告一场巨变  五行学说解玄奇</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/3/n13209078.md#1">【百年真相】“大爱”还是惨剧？三千孤儿入内蒙真相</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13225027.md#1">【新闻看点?】拜习通话分歧大 日本全军演习</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/11/n13227044.md#1">【横河观点】美反恐中共趁机坐大 疫苗强制令惹议</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/11/n13226783.md#1">【财商天下】《红色赌盘》爆料中共权贵黑幕</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13223477.md#1">中美脱钩 汇丰退出美国 纽约客户排队取财物</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13224145.md#1">现实版长发公主坚持留发31年 发长近两米</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13224811.md#1">【不断更新】强台璨树袭台！ 11日全台停班停课一览</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13225106.md#1">首度出演漫威英雄电影 梁朝伟惊人片酬曝光</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/9/n13222625.md#1">受出事艺人牵连 杨紫三部新戏恐遭禁播</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13223155.md#1">《绝夜逢生》第二季影评：军民共存成全新挑战</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13225338.md#1">戳气球公布二胎性别 瑞莎：体操队加入新选手</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13223777.md#1">伊拉克战争中 美军F-16战机以音爆拯救英军</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/11/n13225783.md#1">奇特小行星长得像狗骨头 长270公里</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13223973.md#1">美国空姐透露 他们最讨厌乘客做这些事</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/11/n13225990.md#1">被锁在空屋里52天 荷兰小猫奇迹般存活</a></li>
-<li><a href="https://github.com/vtmwhj347/djy/blob/master/gb/21/9/10/n13223937.md#1">中国称研发首款新冠特效药？专家：存在7个问题</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vtmwhj347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vtmwhj347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/12/n13228383.htm">杨威：9?11二十年后 中美关系待重新定义</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/12/n13228383.htm">杨威：9?11二十年后 中美关系待重新定义</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vtmwhj347/djy/blob/master/gb/21/9/12/n13228383.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vtmwhj347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vtmwhj347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vtmwhj347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vtmwhj347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtmwhj347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/12/n13228383.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
